# Harsh-Review-Detector

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: hotel_reviews.csv  reviews.csv
data/raw/: listings.csv  reviews.csv
docs/: mkdocs.yml
docs/docs/: index.md
harsh_review_detector/: analyze_ab_log.py  config.py  run_experiment_ab.py  service.py  service_utils.py  simulate_experiment_ab.py
harsh_review_detector/modeling/: dataset_operations.py  naive_bayes_train_and_evaluate.py  svm_train_and_ewaluate.py
models/: base_model.pkl
notebooks/: 1.0-db-data-analysis.ipynb  1.0-db-listing-data-analysis.ipynb  1.0-db-review-data-analysis.ipynb  2.0-db-review-data-analysis.ipynb  3.0-db-prepare-data.ipynb  4.0-db-prepare-data-for-experiment-ab.ipynb
